--- a/src/apps/demo/BUILD.bazel
+++ b/src/apps/demo/BUILD.bazel
@@ -28,7 +28,9 @@ ng_module(
             "//src/apps/demo/shared-components/dependency-injection:addressbook",
             "//src/apps/demo/shared-components/access-child-components:accesschildcomponents",
             "//src/apps/demo/shared-components/change-detection:changedetection",
-            "//src/apps/demo/shared-components/log-tail:logtail"
+            "//src/apps/demo/shared-components/log-tail:logtail",
+            "//src/apps/demo/shared-components/rxjs-error-handling:rxjserrorhandling",
+            "//src/apps/demo/shared-components/rxjs-caching:rxjscaching"
             
     ],
 )
