--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -35,6 +35,8 @@ filegroup(
         "//:api",
         "//:node_modules/systemjs/dist/system.src.js",
         "//:site.css",
-        "//:node_modules/bootstrap/dist/css/bootstrap.min.css"
+        "//:node_modules/bootstrap/dist/css/bootstrap.min.css",
+        "//:node_modules/jquery-ui-dist/jquery-ui.min.js",
+        "//:node_modules/jquery/dist/jquery.min.js"
     ]
 )
