--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "aot-i18n-en": "ngc -p src/tsconfig-i18n.json && rollup -c rollup/rollup-config-i18n.js -o dist/build-en.js",
     "aot-i18n-no": "ngc --i18nFile=./src/apps/i18n-demo-app/locale/messages.no.xlf --locale=no --i18nFormat=xlf -p src/tsconfig-i18n.json && rollup -c rollup/rollup-config-i18n.js -o dist/build-no.js",
     "generate-i18n-xlf": "ng-xi18n -p i18n/tsconfig.json",
-    "lite": "lite-server",
+    "lite": "lite-server ",
     "start": "npm run lite",
     "build-demo-app": "ngc -p src/tsconfig.json && rollup -c rollup/rollup-config.js && ngc -p src/tsconfig-upgrade.json && rollup -c rollup/rollup-ng-upgrade.js",
     "browserify-demo": "ngc -p src/tsconfig-es5-commonjs-aot.json && browserify built-es5-commonjs-aot/src/apps/bundler-comparison-app/main.js -o dist/browserify-bundle.js && uglifyjs dist/browserify-bundle.js -o dist/browserify-bundle.min.js -c -m",
@@ -41,19 +41,19 @@
   "dependencies": {
     "angular": "~1.4.7",
     "@angular/bazel": "angular/bazel-builds#d09df98b39658463fdfe3567b25a20cdd7130661",
-    "@angular/animations": "5.2.2",
-    "@angular/common": "5.2.2",
-    "@angular/compiler": "5.2.2",
-    "@angular/compiler-cli": "5.2.2",
-    "@angular/core": "5.2.2",
-    "@angular/forms": "5.2.2",
-    "@angular/http": "5.2.2",
-    "@angular/platform-browser": "5.2.2",
-    "@angular/platform-browser-dynamic": "5.2.2",
-    "@angular/platform-server": "5.2.2",
+    "@angular/animations": "6.0.0-beta.1",
+    "@angular/common": "6.0.0-beta.1",
+    "@angular/compiler": "6.0.0-beta.1",
+    "@angular/compiler-cli": "6.0.0-beta.1",
+    "@angular/core": "6.0.0-beta.1",
+    "@angular/forms": "6.0.0-beta.1",
+    "@angular/http": "6.0.0-beta.1",
+    "@angular/platform-browser": "6.0.0-beta.1",
+    "@angular/platform-browser-dynamic": "6.0.0-beta.1",
+    "@angular/platform-server": "6.0.0-beta.1",
     "google-closure-compiler": "20171023.0.1",
-    "@angular/router": "5.2.2",
-    "@angular/upgrade": "5.2.2",
+    "@angular/router": "6.0.0-beta.1",
+    "@angular/upgrade": "6.0.0-beta.1",
     "bootstrap": "~3.3.4",
     "core-js": "^2.4.1",
     "events": "^1.0.2",
