--- a/src/apps/demo/BUILD.bazel
+++ b/src/apps/demo/BUILD.bazel
@@ -32,8 +32,7 @@ ng_module(
             "//src/apps/demo/shared-components/http:http",
             "//src/apps/demo/shared-components/rxjs-caching:rxjscaching",
             "//src/apps/demo/shared-components/jquery-integration:jqueryintegration"
-            
-    ],
+    ]
 )
 
 load("@build_bazel_rules_nodejs//internal:devmode_js_sources.bzl", "devmode_js_sources")
@@ -54,19 +53,17 @@ nodejs_binary(
     ],
 )
  
-load(":bundle.bzl", "bundle")
-bundle(
+load(":dev-bundle.bzl", "dev")
+dev(
     name = "bundle",
+    entryPoint = "src/apps/demo",
     devsource = ":devsources.MF"
 ) 
 
 nodejs_binary(
     name = "web",
     entry_point = "lite-server/bin/lite-server",
-    templated_args = ["--baseDir", "."],
     data = [
-        "//:index.html",
-        "//:site.css",
         "//:bootstrap_files",
         ":bundle.js"
     ]
