--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3,6 +3,7 @@ package(default_visibility = ["//visibility:public"])
 exports_files(["tsconfig.json"])
 exports_files(["index.html"])
 exports_files(["concat.js"])
+exports_files(["webpack.config.js"])
 
 
 filegroup(
@@ -25,6 +26,8 @@ filegroup(
         "*.d.ts",
     ]] + [
         "node_modules/lite-server/**",
+    ]+ [
+        "node_modules/webpack/**",
     ]),
 )
 
@@ -33,13 +36,10 @@ filegroup(
     srcs = [
         "//:node_modules/zone.js/dist/zone.min.js",
         "//:api",
-        "//:node_modules/systemjs/dist/system.src.js",
         "//:site.css",
         "//:index.html",
         "//:node_modules/bootstrap/dist/css/bootstrap.min.css",
         "//:node_modules/jquery-ui-dist/jquery-ui.min.js",
-        "//:node_modules/jquery/dist/jquery.min.js",
-        "//:bs-config.js",
-        "//:systemjs-config.js"
+        "//:node_modules/jquery/dist/jquery.min.js"
     ]
 )
