--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -4,6 +4,7 @@ exports_files(["tsconfig.json"])
 exports_files(["index.html"])
 exports_files(["concat.js"])
 exports_files(["webpack.config.js"])
+exports_files(["rollup.config.js"])
 exports_files(["angular.tsconfig.json"])
 
 filegroup(
@@ -27,18 +28,12 @@ filegroup(
     ]] + [
         "node_modules/lite-server/**",
     ]+ [
-        "node_modules/webpack/**",
+        "node_modules/rollup/**",
     ]+ [
         "node_modules/typescript/**",
     ]+ [
         "node_modules/uglify-js/**",
-    ]+ [
-       "node_modules/@angular-devkit/build-optimizer/**",
-    ]+ [
-       "node_modules/loader-utils/**",
-    ]+ [
-       "node_modules/source-map/**",
-    ]),
+    ])
 )
 
 filegroup(
@@ -52,6 +47,7 @@ filegroup(
         "//:bs-config.js",
         "//:node_modules/bootstrap/dist/css/bootstrap.min.css",
         "//:node_modules/jquery-ui-dist/jquery-ui.min.js",
-        "//:node_modules/jquery/dist/jquery.min.js"
+        "//:node_modules/jquery/dist/jquery.min.js",
+        "//:node_modules/systemjs/dist/system.src.js"
     ]
 )
