--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@angular-devkit/build-optimizer": "0.0.36",
     "@ngtools/webpack": "1.9.3",
     "typescript": "2.6.2",
-    "uglify-js": "3.2.2"
+    "uglify-js": "3.2.2",
+    "rollup": "0.55.0",
+    "rollup-plugin-node-resolve": "3.0.0"
   },
   "dependencies": {
     "angular": "~1.4.7",
