--- a/src/apps/demo/BUILD.bazel
+++ b/src/apps/demo/BUILD.bazel
@@ -51,11 +51,11 @@ es6(
 )
 
 nodejs_binary(
-    name = "webpack",
-    entry_point = "webpack/bin/webpack",
+    name = "rollup",
+    entry_point = "rollup/bin/rollup",
     data = [
         "//:bootstrap_files",
-        "//:webpack.config.js",
+        "//:rollup.config.js",
         ":prod_source"
     ]
 )
@@ -70,11 +70,11 @@ nodejs_binary(
     entry_point = "uglify-js/bin/uglifyjs"
 )
 
-load(":webpack.bzl", "webpack")
+load(":rollup.bzl", "rollup")
 
-webpack(
+rollup(
     name = "prod",
-    entryPoint = "src/apps/demo"
+    entry_point = "main.js"
 )
 
 nodejs_binary(
@@ -82,6 +82,6 @@ nodejs_binary(
     entry_point = "lite-server/bin/lite-server",
     data = [
         "//:bootstrap_files",
-        ":prod.min.js"
+        ":main.js"
     ]
 )
