--- a/src/apps/demo/BUILD.bazel
+++ b/src/apps/demo/BUILD.bazel
@@ -82,6 +82,6 @@ nodejs_binary(
     entry_point = "lite-server/bin/lite-server",
     data = [
         "//:bootstrap_files",
-        ":main.js"
+        ":prod"
     ]
 )
