--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,11 +1,6 @@
 package(default_visibility = ["//visibility:public"])
 
-exports_files(["tsconfig.json"])
-exports_files(["index.html"])
-exports_files(["concat.js"])
-exports_files(["webpack.config.js"])
 exports_files(["rollup.config.js"])
-exports_files(["angular.tsconfig.json"])
 
 filegroup(
     name = "node_modules",
@@ -27,12 +22,7 @@ filegroup(
         "*.d.ts",
     ]] + [
         "node_modules/lite-server/**",
-    ]+ [
-        "node_modules/rollup/**",
-    ]+ [
-        "node_modules/typescript/**",
-    ]+ [
-        "node_modules/uglify-js/**",
+        "node_modules/rollup/**"
     ])
 )
 
@@ -46,8 +36,6 @@ filegroup(
         "//:index.html",
         "//:bs-config.js",
         "//:node_modules/bootstrap/dist/css/bootstrap.min.css",
-        "//:node_modules/jquery-ui-dist/jquery-ui.min.js",
-        "//:node_modules/jquery/dist/jquery.min.js",
         "//:node_modules/systemjs/dist/system.src.js"
     ]
 )
