--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "angular2-poc",
   "scripts": {
     "postinstall": "cp router_state.d.ts node_modules/@angular/router/src && ngc -p angular.tsconfig.json",
+    "build": "ibazel build //src/apps/demo:prod",
     "serve": "ibazel run //src/apps/demo:prod_web"
   },
   "devDependencies": {
