--- a/src/apps/demo/BUILD.bazel
+++ b/src/apps/demo/BUILD.bazel
@@ -54,8 +54,7 @@ nodejs_binary(
 load(":rollup.bzl", "rollup")
 
 rollup(
-    name = "prod",
-    entry_point = "main.js"
+    name = "prod"
 )
 
 nodejs_binary(
