--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -34,6 +34,6 @@ filegroup(
         "//:site.css",
         "//:index.html",
         "//:node_modules/bootstrap/dist/css/bootstrap.min.css",
-        "//:node_modules/systemjs/dist/system.src.js"
+        "//:node_modules/systemjs/dist/system.js"
     ]
 )
