--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "angular-poc",
   "scripts": {
     "postinstall": "cp router_state.d.ts node_modules/@angular/router/src && ngc -p angular.tsconfig.json",
-    "build": "ibazel build //src/apps/demo:prod",
-    "serve": "ibazel run //src/apps/demo:prod_web"
+    "build-prod": "ibazel build //src/apps/demo:prod",
+    "serve-prod": "ibazel run //src/apps/demo:prod_web",
+    "serve-dev": "ibazel run //src/apps/demo:dev_web"
   },
   "devDependencies": {
     "@bazel/ibazel": "0.3.1",
