--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "devDependencies": {
     "@bazel/ibazel": "0.3.1",
+    "connect-history-api-fallback": "^1.5.0",
+    "compression": "1.6.2",
     "lite-server": "2.3.0",
     "path": "0.12.7",
     "rollup": "0.55.0",
