create entry point

--- a/src/apps/demo/BUILD.bazel
+++ b/src/apps/demo/BUILD.bazel
@@ -44,7 +44,8 @@ nodejs_binary(
 load(":rollup.bzl", "rollup")
 
 rollup(
-    name = "prod"
+    name = "prod",
+    entry_point = "apps/demo/main.js"
 )
 
 nodejs_binary(
