--- a/tools/bazel.rc
+++ b/tools/bazel.rc
@@ -17,3 +17,9 @@ test --test_output=errors
 build:ci --local_resources=3072,2.0,1.0
 
 build:ci --noshow_progress
+
+build --experimental_remote_spawn_cache
+build --remote_http_cache=http://localhost:9999/cache
+
+run --experimental_remote_spawn_cache
+run --remote_http_cache=http://localhost:9999/cache
