--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "angular-poc",
   "scripts": {
     "postinstall": "cp router_state.d.ts node_modules/@angular/router/src && ngc -p angular.tsconfig.json",
-    "build-prod": "ibazel build //src/apps/demo:prod",
-    "serve-prod": "ibazel run //src/apps/demo:prod_web"
+    "build": "bazel build //src/apps/demo:prod",
+    "server": "ibazel run //src/apps/demo:prod_web",
+    "start-remote-cache": "docker-compose -f caching/docker-compose.yml up",
+    "clear-remote-cache": "npm run clear-web-container && npm run clear-web-image"
   },
   "devDependencies": {
     "@bazel/ibazel": "0.3.1",
