--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "angular-poc",
   "scripts": {
-    "postinstall": "cp router_state.d.ts node_modules/@angular/router/src && ngc -p angular.tsconfig.json",
+    "postinstall": "ngc -p angular.tsconfig.json",
     "build": "bazel build //src/apps/demo:prod",
-    "server": "ibazel run //src/apps/demo:prod_web",
+    "server": "bazel run //src/apps/demo:prod_web",
     "start-remote-cache": "docker-compose -f caching/docker-compose.yml up",
     "clear-remote-cache": "npm run clear-web-container && npm run clear-web-image"
   },
@@ -13,25 +13,25 @@
     "path": "0.12.7",
     "rollup": "0.55.0",
     "rollup-plugin-node-resolve": "3.0.0",
-    "typescript": "2.6.2",
+    "typescript": "2.7.2",
     "uglify-js": "3.2.2"
   },
   "dependencies": {
-    "@angular/bazel": "angular/bazel-builds#d09df98b39658463fdfe3567b25a20cdd7130661",
-    "@angular/animations": "6.0.0-beta.2",
-    "@angular/common": "6.0.0-beta.2",
-    "@angular/compiler": "6.0.0-beta.2",
-    "@angular/compiler-cli": "6.0.0-beta.2",
-    "@angular/core": "6.0.0-beta.2",
-    "@angular/forms": "6.0.0-beta.2",
-    "@angular/http": "6.0.0-beta.2",
-    "@angular/platform-browser": "6.0.0-beta.2",
-    "@angular/platform-browser-dynamic": "6.0.0-beta.2",
-    "@angular/platform-server": "6.0.0-beta.2",
-    "@angular/router": "6.0.0-beta.2",
-    "@angular/upgrade": "6.0.0-beta.2",
+    "@angular/bazel": "6.0.0",
+    "@angular/animations": "6.0.0",
+    "@angular/common": "6.0.0",
+    "@angular/compiler": "6.0.0",
+    "@angular/compiler-cli": "6.0.0",
+    "@angular/core": "6.0.0",
+    "@angular/forms": "6.0.0",
+    "@angular/http": "6.0.0",
+    "@angular/platform-browser": "6.0.0",
+    "@angular/platform-browser-dynamic": "6.0.0",
+    "@angular/platform-server": "6.0.0",
+    "@angular/router": "6.0.0",
+    "@angular/upgrade": "6.0.0",
     "core-js": "^2.4.1",
-    "rxjs": "5.5.6",
+    "rxjs": "6.0.0",
     "systemjs": "0.20.19",
     "zone.js": "0.8.6"
   }
