--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,5 +1,10 @@
 package(default_visibility = ["//visibility:public"])
 
+alias(
+    name = "install",
+    actual = "@yarn//:yarn",
+)
+
 exports_files(["rollup.config.js"])
 
 filegroup(
