--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "name": "angular-poc",
   "scripts": {
-    "postinstall": "ngc -p angular.tsconfig.json",
-    "build": "bazel build //src/apps/demo:prod",
-    "server": "bazel run //src/apps/demo:prod_web",
-    "clear-web-container": "docker stop web && docker rm web",
-    "clear-web-image": "docker rmi caching_web",
-    "start-remote-cache": "docker-compose -f caching/docker-compose.yml up",
-    "clear-remote-cache": "npm run clear-web-container && npm run clear-web-image"
+    "build": "ibazel build //src/apps/demo:prod",
+    "start": "ibazel run //src/apps/demo:prod_web",
+    "remove-server": "docker-compose down",
+    "start-server": "docker-compose up"
   },
   "devDependencies": {
     "@bazel/ibazel": "0.3.1",
@@ -35,6 +32,6 @@
     "core-js": "^2.4.1",
     "rxjs": "6.0.0",
     "systemjs": "0.20.19",
-    "zone.js": "0.8.6"
+    "zone.js": "0.8.26"
   }
 }
