--- a/tools/bazel.rc
+++ b/tools/bazel.rc
@@ -18,20 +18,15 @@ build:ci --local_resources=3072,2.0,1.0
 
 build:ci --noshow_progress
 
-# Write to cache
 build --experimental_remote_spawn_cache
-build --remote_http_cache=http://Torgeirs-MBP-2.home:9999/cache
+build --remote_http_cache=http://cache/cache
+build --experimental_strict_action_env
 
 run --experimental_remote_spawn_cache
-run --remote_http_cache=http://Torgeirs-MBP-2.home/cache
+run --remote_http_cache=http://cache/cache
+run --experimental_strict_action_env
 
-# Only read from cache
-#build --spawn_strategy=remote --genrule_strategy=remote
-#build --strategy=Javac=remote --strategy=Closure=remote
-#build --remote_http_cache=http://localhost:9999/cache
-#build --remote_upload_local_results=false
 
-#run --spawn_strategy=remote --genrule_strategy=remote
-#run --strategy=Javac=remote --strategy=Closure=remote
-#run --remote_http_cache=http://localhost:9999/cache
-#run --remote_upload_local_results=false
+
+
+
